# PX4-ROS2

./: .gitignore
camera_detection/: setup.py
camera_detection/camera_detection/: commander.py  yolo_processor_node.py
offboard/: CMakeLists.txt
offboard/src/: offboard_control.cpp  offboard_sim_waypoints.cpp
opencv_webcam_sub/src/: opencv_webcam_sub.cpp
yolo_detection/yolo_detection/: siyi_camera.py  yolo_tracker.py
